# protonmail-mcp

./: .env.sample  .gitignore  CLAUDE.md  DEPLOYMENT.md  Dockerfile  hk.pkl  mise.toml  pyproject.toml
docs/: architecture-v2.md  architecture-v3.md  architecture-v4.md  data-flow-invariants.md
src/email_mcp/: __init__.py  __main__.py  auth.py  body_indexer.py  composer.py  config.py  convert.py  crypto.py  db.py  decryptor.py  embedder.py  event_loop.py  idle.py  imap.py  initial_sync.py  logging.py  models.py  ntfy.py  progress.py  proton_api.py  query_builder.py  relevance.py  search.py  security.py  sender.py  server.py  srp.py  store.py  summarizer.py  sync.py
src/protonmail_mcp/: __init__.py  config.py  himalaya.py  logging.py  models.py  notmuch.py  server.py  template.py
tests/: conftest.py  test_auth.py  test_batch.py  test_body_indexer.py  test_composer.py  test_config.py  test_convert.py  test_crypto.py  test_db.py  test_decryptor.py  test_embedder.py  test_event_loop.py  test_himalaya.py  test_idle.py  test_imap.py  test_initial_sync.py  test_logging.py  test_managing.py  test_models.py  test_notmuch.py  test_ntfy.py  test_oauth_storage.py  test_proton_api.py  test_query_builder.py  test_relevance.py  test_search.py  test_search_discriminator.py  test_security.py  test_sender.py  test_server.py  test_store.py  test_summarizer.py  test_sync.py  test_template.py  test_tools_composing.py  test_tools_listing.py  test_tools_managing.py  test_tools_reading.py  test_tools_searching.py
tests/live/: conftest.py  test_live_batch_query.py  test_live_cleanup.py  (+5 more)
(+11 files in other folders)
