[project]
name = "email-mcp"
version = "0.1.0"
description = "Maildir-native MCP server for email with full-text search"
readme = "README.md"
authors = [
    { name = "Jamie Kirkpatrick", email = "jkp@kirkconsulting.co.uk" }
]
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=3.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "structlog>=24.0",
    "html2text>=2024.2.26",
    "aiosmtplib>=3.0",
    "pymupdf>=1.27.2",
    "imapclient>=3.1.0",
    "httpx>=0.28.1",
    "proton-client>=0.5.1",
    "msgpack>=1.1.2",
    "pgpy13>=0.6.1rc1",
]

[project.scripts]
email-mcp = "email_mcp.server:main"
email-mcp-auth = "email_mcp.auth:main"

[build-system]
requires = ["uv_build>=0.9.17,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
    "pytest-cov>=6.0",
    "mypy>=1.0",
    "ruff>=0.9",
    "pytest-timeout>=2.3",
    "pytest-order>=1.3.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "live: tests that require a running mail server",
]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["E501"]

[tool.mypy]
python_version = "3.13"
strict = true
